argocd-gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
    - "*"  # or your DNS name
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
